--- a/templates/lopputyo/index.html.twig
+++ b/templates/lopputyo/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}Aloitelista{% endblock %}
 {% block body %}
-   <h1>Aloitelistaus</h1>
+   <h1>Aloitelista</h1>
    <div id="divi">
    <table class="table table-hover">
    <thead class="thead-dark">
@@ -27,7 +27,7 @@
        <td>{{ aloite.sukunimi }}</td>
        <td>{{ aloite.email }}</td>
        <td>
-           <a href="{{ path('aloite_lista', {id: aloite.id}) }}" class="btn btn-dark">Naytä</a>
+           <a href="{{ path('aloite_nayta', {id: aloite.id}) }}" class="btn btn-dark">Naytä</a>
            <a href="{{ path('aloite_muokkaa', {id: aloite.id}) }}" class="btn btn-success">Muokkaa</a>
            <button poista-aloite="{{ aloite.id }}" class="btn btn-danger poista-aloite">Poista</button>
        </td>
